@@ -1,15 +1,15 @@
 package org.AirlineReservationSystem.service;
 
-import org.AirlineReservationSystem.model.Airport;
-import org.AirlineReservationSystem.model.Flight;
-import org.AirlineReservationSystem.model.Schedule;
+import org.AirlineReservationSystem.dto.ScheduleDTO;
+import org.AirlineReservationSystem.dto.SearchRequest;
 import org.AirlineReservationSystem.repository.AirportRepository;
 import org.AirlineReservationSystem.repository.FlightRepository;
 import org.AirlineReservationSystem.repository.ScheduleRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class SearchService {
@@ -23,14 +23,13 @@ public class SearchService {
         this.scheduleRepo = scheduleRepo;
     }
 
-    public List<Schedule> searchSchedules(String originCode, String destCode, LocalDateTime from, LocalDateTime to) {
-        Airport origin = airportRepo.findByCode(originCode);
-        Airport dest = airportRepo.findByCode(destCode);
-        if (origin == null || dest == null) {
-            throw new IllegalArgumentException("Invalid airport codes");
-        }
-
-        List<Flight> flights = flightRepo.findByOriginCodeAndDestinationCode(originCode, destCode);
-        return flights.stream().flatMap(f -> scheduleRepo.findByFlightIdAndDepartureBetween(f.getId(), from, to).stream()).toList();
+    public List<ScheduleDTO> searchSchedules(SearchRequest req) {
+        var flights = flightRepo.findByOrigin_CodeAndDestination_Code(req.getOriginCode(), req.getDestinationCode());
+        return flights.stream()
+                .flatMap(f -> scheduleRepo.findByFlightIdAndDepartureBetween(f.getId(), req.getFrom(), req.getTo()).stream())
+                .map(s -> new ScheduleDTO(
+                        s.getId(), f.getOrigin().getCode(), f.getDestination().getCode(),
+                        s.getDeparture(), s.getArrival(), s.getBasePrice()))
+                .collect(Collectors.toList());
     }
 }
